Fix text wrapping on securities-request table. (#1518)

--- a/app/assets/stylesheets/securities.scss
+++ b/app/assets/stylesheets/securities.scss
@@ -511,3 +511,9 @@
     }
   }
 }
+
+.securities-request-table {
+  td:nth-child(2) {
+    white-space: nowrap;
+  }
+}
